development-runs/377/k8s/prod/account-api-mongo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: account-api-mongo
  namespace: rrb-app
  labels:
    app.kubernetes.io/name: account-api-mongo
spec:
  serviceName: account-api-mongo
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: account-api-mongo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: account-api-mongo
    spec:
      containers:
        - name: account-api-mongo
          image: mongo:6.0.5
          ports:
            - name: mongo
              containerPort: 27017
              protocol: TCP
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: account-api-mongo-data
---
apiVersion: v1
kind: Service
metadata:
  name: account-api-mongo
  namespace: rrb-app
  labels:
    app.kubernetes.io/name: account-api-mongo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: account-api-mongo
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
      protocol: TCP
