development-runs/377/k8s/prod/asset-management-api-mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: asset-management-api-mysql
  namespace: rrb-app
  labels:
    app.kubernetes.io/name: asset-management-api-mysql
spec:
  serviceName: asset-management-api-mysql
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: asset-management-api-mysql
  template:
    metadata:
      labels:
        app.kubernetes.io/name: asset-management-api-mysql
    spec:
      containers:
        - name: asset-management-api-mysql
          image: mysql:8.0.33
          args:
            - --default-authentication-plugin=mysql_native_password
          ports:
            - name: mysql
              containerPort: 3306
              protocol: TCP
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: asset-management-api-mysql-data
---
apiVersion: v1
kind: Service
metadata:
  name: asset-management-api-mysql
  namespace: rrb-app
  labels:
    app.kubernetes.io/name: asset-management-api-mysql
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: asset-management-api-mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
      protocol: TCP
