development-runs/377/k8s/prod/notification-api-kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-api-kafka
  namespace: rrb-app
  labels:
    app.kubernetes.io/name: notification-api-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: notification-api-kafka
  template:
    metadata:
      labels:
        app.kubernetes.io/name: notification-api-kafka
    spec:
      containers:
        - name: notification-api-kafka
          image: confluentinc/cp-kafka:7.4.0
          ports:
            - name: kafka
              containerPort: 9092
              protocol: TCP
            - name: controller
              containerPort: 29093
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: notification-api-kafka
  namespace: rrb-app
  labels:
    app.kubernetes.io/name: notification-api-kafka
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: notification-api-kafka
  ports:
    - name: kafka
      port: 9092
      targetPort: 9092
      protocol: TCP
