development-runs/377/k8s/prod/transaction-api-postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: transaction-api-postgres
  namespace: rrb-app
  labels:
    app.kubernetes.io/name: transaction-api-postgres
spec:
  serviceName: transaction-api-postgres
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: transaction-api-postgres
  template:
    metadata:
      labels:
        app.kubernetes.io/name: transaction-api-postgres
    spec:
      containers:
        - name: transaction-api-postgres
          image: postgres:15.2
          ports:
            - name: postgres
              containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: transaction-api-postgres-data
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-api-postgres
  namespace: rrb-app
  labels:
    app.kubernetes.io/name: transaction-api-postgres
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: transaction-api-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
